Version 0.6.0

	Fixed libxmlwrapp to not depend on libxslt if XSLT support
	is enabled (Vadim Zeitlin, #1927398).

	Ported Unix build system to Autotools.

Version 0.5.1

	Various compilation fixes.

Version 0.5.0

	?

Version 0.4.4

	Small changes so that xmlwrapp can work with libxml2
	version 2.6.0. Thanks goes to Craig Wiesen and Jonathan
	Wakely for finding this. (Bug ID 18).

	Fixed a typo in the manual. Thanks goes to Bill
	Luoma. (Bug ID 16).

Version 0.4.3

	Fixed a build problem on Linux (bug 10). This happens when
	libxslt was installed in /usr. configure.pl could not find
	libxslt because xslt-config does not list /usr/include.

	Updated the TODO list.


Version 0.4.2

	Version 0.4.2 is a maintenance release. A few small bugs were
	fixed and a work around for a bug in Perl 5.8 was added.

	Updated Perl scripts to work around a bug in the Perl 5.8
	regex parser. Thanks goes to Andy Chou.

	Added an encoding patch from Dmitriy Nikitinskiy.

Version 0.4.1

	Version 0.4.1 fixes a few small bugs and also includes some new
	features. It is binary compatible with version 0.4.0.

	Typos in the doxygen documentation were fixed thanks to Jonathan
	Wakely, Stephen Blake and Chris de Hoop.

	Fixed a bug in configure.pl that caused a bad xmlwrapp-config to
	be generated when XSLT was enabled.

	Added support for pkg-config and the xmlwrapp.pc file.

	Added support for libexslt.

	Added the xml::init::remove_whitespace member function to skip
	ignorable whitespace from parsed XML documents. Default value is
	false, so whitespace is included in the node tree by default.

	Added the xml::node::self and xml::node::parent member
	functions. They return @code{xml::node::iterator} or
	xml::node::const_iterator objects.

	Added a new version of the xml::node::insert member function that
	does not require a location iterator, but instead inserts at the
	end of the child list like the xml::node::push_back member
	function does.
